--- a/app/src/main/res/layout/dialog_permission.xml
+++ b/app/src/main/res/layout/dialog_permission.xml
@@ -8,13 +8,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Solicitar Permiso"
-        android:fontFamily="@font/nunito_bold"
-        android:textColor="@color/black100"
-        android:textSize="20dp"
+        android:text="@string/dialog_permission_title"
         android:layout_marginTop="25dp"
         android:layout_marginBottom="20dp"
-        ></TextView>
+        style="@style/titles"></TextView>
 
     <Spinner
         android:id="@+id/spnPermissionType"
@@ -29,7 +26,7 @@
         android:id="@+id/txtStartDate"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="Fecha inicio"
+        android:hint="@string/start_date_label"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         android:layout_marginTop="15dp"
@@ -48,7 +45,7 @@
         android:id="@+id/txtEndDate"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="Fecha fin"
+        android:hint="@string/end_date_label"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         android:layout_marginTop="15dp"
