--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,12 @@
         <item name="android:windowBackground">@drawable/splash</item>
     </style>
 
+    <style name="titles">
+        <item name="android:fontFamily">@font/nunito_bold</item>
+        <item name="android:textColor">@color/black100</item>
+        <item name="android:textSize">20dp</item>
+    </style>
+
 
 </resources>
 
