--- a/app/src/main/res/layout/fragment_permission.xml
+++ b/app/src/main/res/layout/fragment_permission.xml
@@ -1,13 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+    <data>
+
+        <variable
+            name="permissionViewModel"
+            type="com.apptec.registrateapp.mainactivity.fpermission.PermissionViewModel" />
+    </data>
+
+
+    <RelativeLayout
+
+
+        android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            android:text="No has registrado ningún permiso" />
+
+
+        <ListView
         android:id="@+id/permission_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,7 +37,9 @@
         app:layout_constraintTop_toTopOf="parent"
         android:dividerHeight="30dp"
         tools:listitem="permission_element"
+            android:visibility="visible"
         android:divider="@drawable/list_view_divider"></ListView>
+
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -29,8 +52,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
-        android:onClick="@{() -> mainViewModel.}" />
+        android:onClick="@{() -> permissionViewModel.onAddNewPermission(true)}" />
 
 </RelativeLayout>
-
-
+</layout>
