--- a/app/src/main/res/layout/permission_element.xml
+++ b/app/src/main/res/layout/permission_element.xml
@@ -1,40 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/device_element"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:descendantFocusability="blocksDescendants"
-    >
+<layout>
 
-    <RelativeLayout
+    <data>
+
+
+    </data>
+
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/device_element"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:descendantFocusability="blocksDescendants">
 
-        <TextView
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <TextView
             android:id="@+id/txtPermissionType"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:fontFamily="@font/nunito_bold"
             android:textColor="@color/black100"
-            android:textSize="20dp"
-            android:layout_centerVertical="true"
+                android:textSize="20dp"
+                tools:text="Intempestivo"
+                android:layout_centerVertical="true"
             android:gravity="center_vertical"/>
 
-        <ImageButton
-            android:id="@+id/btnDeletePermission"
-            android:layout_alignParentRight="true"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:background="@null"
-            android:src="@drawable/ic_delete"/>
+            <ImageButton
+                android:id="@+id/btnDeletePermission"
+                android:layout_alignParentRight="true"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:background="@null"
+                android:src="@drawable/ic_delete"
+                tools:src="@drawable/ic_delete" />
 
     </RelativeLayout>
 
@@ -51,6 +59,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Estado: "
+            tools:text="Estado: "
             android:fontFamily="@font/opensans_light"
             android:textColor="@color/black100"
             android:textSize="15dp" />
@@ -59,7 +68,8 @@
             android:id="@+id/txtPermissionStatus"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Huawei"
+            tools:text="Huawei"
+
             android:fontFamily="@font/opensans_light"
             android:textColor="@color/black100"
             android:textSize="15dp" />
@@ -90,7 +100,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
                 android:background="@drawable/circle_chip_background"
-                android:src="@drawable/ic_play" />
+                android:src="@drawable/ic_play"
+                tools:src="@drawable/ic_play" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -162,7 +173,9 @@
     </LinearLayout>
 
 
-</LinearLayout>
+    </LinearLayout>
 
+
+</layout>
 
 
