--- a/app/src/main/res/layout/fragment_permission.xml
+++ b/app/src/main/res/layout/fragment_permission.xml
@@ -38,7 +38,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="permission_element"></androidx.recyclerview.widget.RecyclerView>
+            tools:listitem="@layout/permission_item"></androidx.recyclerview.widget.RecyclerView>
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
