--- a/app/src/main/res/layout/permission_item.xml
+++ b/app/src/main/res/layout/permission_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -10,176 +12,149 @@
     </data>
 
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/device_element"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:descendantFocusability="blocksDescendants"
-        android:orientation="vertical">
+        android:layout_height="176dp">
 
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="5dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:background="@color/cardview_dark_background">
+
 
             <TextView
                 android:id="@+id/txtPermissionType"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_centerVertical="true"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/nunito_bold"
                 android:gravity="center_vertical"
+                android:text="@{permissionFull.permissionType.typeName}"
                 android:textColor="@color/black100"
                 android:textSize="20dp"
-                android:text="@{permissionFull.permissionType.typeName}"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:text="Intempestivo" />
+
 
             <ImageButton
                 android:id="@+id/btnDeletePermission"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
-                android:layout_alignParentRight="true"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="32dp"
                 android:background="@null"
+                android:contentDescription="borrar"
                 android:src="@drawable/ic_delete"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:src="@drawable/ic_delete" />
 
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="5dp"
-            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/lblPermissionStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/opensans_light"
                 android:text="Estado: "
                 android:textColor="@color/black100"
                 android:textSize="15dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtPermissionType"
                 tools:text="Estado: " />
+
 
             <TextView
                 android:id="@+id/txtPermissionStatus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
                 android:fontFamily="@font/opensans_light"
                 android:text="@{permissionFull.permissionStatus.statusName}"
                 android:textColor="@color/black100"
                 android:textSize="15dp"
+                app:layout_constraintBaseline_toBaselineOf="@+id/lblPermissionStatus"
+                app:layout_constraintStart_toEndOf="@+id/lblPermissionStatus"
                 tools:text="Aceptado" />
-        </LinearLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:orientation="horizontal">
-
-            <LinearLayout
+            <ImageButton
+                android:id="@+id/imageButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:layout_marginRight="10dp"
-                android:background="@drawable/datetime_chip"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingLeft="5dp"
-                android:paddingRight="15dp">
+                android:layout_marginStart="172dp"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/circle_chip_background"
+                android:src="@drawable/ic_stop"
+                app:layout_constraintStart_toEndOf="@+id/imageButton"
+                app:layout_constraintTop_toBottomOf="@+id/lblPermissionStatus" />
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/circle_chip_background"
-                    android:src="@drawable/ic_play"
-                    tools:src="@drawable/ic_play" />
+            <TextView
+                android:id="@+id/txtStartDate"
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                android:layout_width="75dp"
+                android:layout_height="12dp"
+                android:fontFamily="@font/opensans_light"
+                android:textColor="@color/white"
+                android:textSize="15dp"
+                app:layout_constraintStart_toEndOf="@+id/imageButton"
+                app:layout_constraintTop_toTopOf="@+id/imageButton"
+                tools:text="03-02-2020" />
 
-                    <TextView
-                        android:id="@+id/txtStartDate"
+            <TextView
+                android:id="@+id/txtStartTime"
 
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_light"
-                        android:textColor="@color/white"
-                        android:textSize="15dp" />
+                android:layout_width="38dp"
+                android:layout_height="14dp"
+                android:fontFamily="@font/opensans_light"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageButton"
+                app:layout_constraintStart_toEndOf="@+id/imageButton"
+                tools:text="11:41" />
 
-                    <TextView
-                        android:id="@+id/txtStartTime"
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_light"
-                        android:textColor="@color/white"
-                        android:textSize="15dp" />
-                </LinearLayout>
-            </LinearLayout>
-
-
-            <LinearLayout
+            <ImageButton
+                android:id="@+id/imageButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:background="@drawable/datetime_chip"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingLeft="5dp"
-                android:paddingRight="15dp">
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/circle_chip_background"
+                android:src="@drawable/ic_play"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/lblPermissionStatus"
+                tools:src="@drawable/ic_play" />
 
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:background="@drawable/circle_chip_background"
-                    android:src="@drawable/ic_stop" />
+            <TextView
+                android:id="@+id/txtEndDate"
+                android:layout_width="75dp"
+                android:layout_height="17dp"
+                android:fontFamily="@font/opensans_light"
+                android:textColor="@color/white"
+                android:textSize="15dp"
+                app:layout_constraintStart_toEndOf="@+id/imageButton2"
+                app:layout_constraintTop_toTopOf="@+id/imageButton2"
+                tools:text="03-02-2020" />
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/txtEndDate"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_light"
-                        android:textColor="@color/white"
-                        android:textSize="15dp" />
-
-                    <TextView
-                        android:id="@+id/txtEndTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_light"
-                        android:textColor="@color/white"
-                        android:textSize="15dp" />
-                </LinearLayout>
+            <TextView
+                android:id="@+id/txtEndTime"
+                android:layout_width="41dp"
+                android:layout_height="14dp"
+                android:fontFamily="@font/opensans_light"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
+                app:layout_constraintStart_toEndOf="@+id/imageButton2"
+                tools:text="15:00" />
 
 
-            </LinearLayout>
-
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 
 </layout>
