--- a/app/src/main/res/layout/permission_item.xml
+++ b/app/src/main/res/layout/permission_item.xml
@@ -18,8 +18,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/cardview_dark_background">
+            android:layout_height="match_parent">
 
 
             <TextView
@@ -81,74 +80,104 @@
                 tools:text="Aceptado" />
 
 
-            <ImageButton
-                android:id="@+id/imageButton2"
+            <LinearLayout
+                android:id="@+id/linearLayout2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="172dp"
-                android:layout_marginTop="32dp"
-                android:background="@drawable/circle_chip_background"
-                android:src="@drawable/ic_stop"
-                app:layout_constraintStart_toEndOf="@+id/imageButton"
-                app:layout_constraintTop_toBottomOf="@+id/lblPermissionStatus" />
-
-            <TextView
-                android:id="@+id/txtStartDate"
-
-                android:layout_width="75dp"
-                android:layout_height="12dp"
-                android:fontFamily="@font/opensans_light"
-                android:textColor="@color/white"
-                android:textSize="15dp"
-                app:layout_constraintStart_toEndOf="@+id/imageButton"
-                app:layout_constraintTop_toTopOf="@+id/imageButton"
-                tools:text="03-02-2020" />
-
-            <TextView
-                android:id="@+id/txtStartTime"
-
-                android:layout_width="38dp"
-                android:layout_height="14dp"
-                android:fontFamily="@font/opensans_light"
-                android:textColor="@color/white"
-                android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="@+id/imageButton"
-                app:layout_constraintStart_toEndOf="@+id/imageButton"
-                tools:text="11:41" />
-
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="32dp"
-                android:background="@drawable/circle_chip_background"
-                android:src="@drawable/ic_play"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/datetime_chip"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingLeft="5dp"
+                android:paddingRight="15dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lblPermissionStatus"
-                tools:src="@drawable/ic_play" />
+                app:layout_constraintTop_toBottomOf="@+id/lblPermissionStatus">
 
-            <TextView
-                android:id="@+id/txtEndDate"
-                android:layout_width="75dp"
-                android:layout_height="17dp"
-                android:fontFamily="@font/opensans_light"
-                android:textColor="@color/white"
-                android:textSize="15dp"
-                app:layout_constraintStart_toEndOf="@+id/imageButton2"
-                app:layout_constraintTop_toTopOf="@+id/imageButton2"
-                tools:text="03-02-2020" />
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/circle_chip_background"
+                    android:src="@drawable/ic_play"
+                    tools:src="@drawable/ic_play" />
 
-            <TextView
-                android:id="@+id/txtEndTime"
-                android:layout_width="41dp"
-                android:layout_height="14dp"
-                android:fontFamily="@font/opensans_light"
-                android:textColor="@color/white"
-                android:textSize="15sp"
-                app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
-                app:layout_constraintStart_toEndOf="@+id/imageButton2"
-                tools:text="15:00" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/txtStartDate"
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_light"
+                        android:textColor="@color/white"
+                        android:textSize="15dp"
+                        tools:text="03-02-2020" />
+
+                    <TextView
+                        android:id="@+id/txtStartTime"
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_light"
+                        android:textColor="@color/white"
+                        android:textSize="15dp"
+                        tools:text="11:41" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center"
+                android:layout_marginStart="156dp"
+                android:background="@drawable/datetime_chip"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingLeft="5dp"
+                android:paddingRight="15dp"
+                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
+                app:layout_constraintTop_toTopOf="@+id/linearLayout2">
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/circle_chip_background"
+                    android:src="@drawable/ic_stop" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/txtEndDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_light"
+                        android:textColor="@color/white"
+                        android:textSize="15dp"
+                        tools:text="03-02-2020" />
+
+                    <TextView
+                        android:id="@+id/txtEndTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_light"
+                        android:textColor="@color/white"
+                        android:textSize="15dp"
+                        tools:text="15:00" />
+                </LinearLayout>
+
+
+            </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
