Finally listing the permission from the network

--- a/app/src/main/res/layout/permission_item.xml
+++ b/app/src/main/res/layout/permission_item.xml
@@ -14,11 +14,13 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="176dp">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="2dp">
 
 
             <TextView
@@ -87,7 +89,8 @@
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
                 android:background="@drawable/datetime_chip"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -115,6 +118,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_light"
+                        android:text="@{permissionFull.onlyStartDate}"
                         android:textColor="@color/white"
                         android:textSize="15dp"
                         tools:text="03-02-2020" />
@@ -125,6 +129,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_light"
+                        android:text="@{permissionFull.onlyStartTime}"
                         android:textColor="@color/white"
                         android:textSize="15dp"
                         tools:text="11:41" />
@@ -136,7 +141,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_gravity="center"
-                android:layout_marginStart="156dp"
+                android:layout_marginStart="50dp"
                 android:background="@drawable/datetime_chip"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -162,6 +167,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_light"
+                        android:text="@{permissionFull.onlyEndDate}"
                         android:textColor="@color/white"
                         android:textSize="15dp"
                         tools:text="03-02-2020" />
@@ -171,6 +177,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/opensans_light"
+                        android:text="@{permissionFull.onlyEndTime}"
                         android:textColor="@color/white"
                         android:textSize="15dp"
                         tools:text="15:00" />
