--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -124,6 +124,17 @@
                     android:onClick="@{()->loginViewModel.loginClicked(email.getText().toString(), password.getText().toString())}"
                     android:src="@drawable/right_arrow"
                     android:text="Acceder" />
+
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    style="?android:attr/progressBarStyleSmallTitle"
+                    android:layout_alignParentRight="true"
+                    android:indeterminateTintMode="src_atop"
+                    android:indeterminate="true"
+                    android:visibility="gone" />
             </RelativeLayout>
 
         </LinearLayout>
