Changed all for constraint layouts

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,124 +20,144 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:contentDescription="@string/logo_alt"
+            android:src="@drawable/logo"
+            app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
-            <ImageView
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:src="@drawable/logo" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nunito_bold"
+            android:text="@string/app_name"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toTopOf="@+id/white_section"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/nunito_bold"
-                android:text="@string/app_name"
-                android:textColor="@color/white"
-                android:textSize="30dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayout3"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/white_section"
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:layout_alignParentBottom="true"
             android:background="@drawable/border_corner"
             android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-            <LinearLayout
-                android:layout_width="fill_parent"
+
+            <EditText
+                android:id="@+id/email"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="35dp"
-                android:layout_marginTop="45dp"
-                android:layout_marginRight="35dp"
-                android:orientation="vertical">
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:autofillHints=""
+                android:fontFamily="@font/opensans_light"
 
-                <EditText
-                    android:id="@+id/email"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/opensans_light"
-                    android:hint="Email"
-                    android:inputType="textPersonName"
-                    android:paddingBottom="20dp"
-                    android:textSize="16dp"
-                    tools:layout_editor_absoluteX="81dp"
-                    tools:layout_editor_absoluteY="153dp" />
+                android:hint="@string/email_hint"
+                android:inputType="textWebEmailAddress"
+                android:paddingBottom="20dp"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/password"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed" />
 
-                <EditText
-                    android:id="@+id/password"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/opensans_light"
-                    android:hint="Password"
-                    android:inputType="textPassword"
-                    android:paddingBottom="20dp"
-                    android:textSize="16dp"
-                    tools:layout_editor_absoluteX="81dp"
-                    tools:layout_editor_absoluteY="224dp" />
-            </LinearLayout>
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
+            <EditText
+                android:id="@+id/password"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="35dp"
-                android:layout_marginRight="35dp"
-                android:paddingTop="50dp">
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:autofillHints=""
+                android:fontFamily="@font/opensans_light"
 
-                <TextView
-                    android:id="@+id/txtBienvenido"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_bold"
-                    android:text="Bienvenido"
-                    android:textColor="@color/black100"
-                    android:textSize="30dp"
-                    android:textStyle="bold" />
+                android:hint="@string/password_hint"
+                android:inputType="textPassword"
+                android:paddingBottom="20dp"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/loginButton"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/email" />
 
-                <TextView
-                    android:id="@+id/txtIniciarSesion"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/txtBienvenido"
-                    android:fontFamily="@font/opensans_light"
-                    android:text="Iniciar sesión"
-                    android:textColor="@color/black100"
-                    android:textSize="20dp" />
+            <TextView
+                android:id="@+id/txtBienvenido"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:fontFamily="@font/nunito_bold"
+                android:text="@string/welcome"
+                android:textColor="@color/black100"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/loginButton"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/loginButton" />
 
-                <ImageButton
-                    android:id="@+id/loginButton"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_alignParentRight="true"
-                    android:background="@drawable/rigth_button"
-                    android:onClick="@{()->loginViewModel.loginClicked(email.getText().toString(), password.getText().toString())}"
-                    android:src="@drawable/right_arrow"
-                    android:text="Acceder" />
+            <TextView
+                android:id="@+id/txtIniciarSesion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/txtBienvenido"
+                android:layout_marginStart="16dp"
+                android:fontFamily="@font/opensans_light"
+                android:text="@string/init_session_label"
+                android:textColor="@color/black100"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/txtBienvenido" />
+
+            <ImageButton
+                android:id="@+id/loginButton"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="32dp"
+                android:background="@drawable/rigth_button"
+                android:contentDescription="@string/login_button_alt"
+                android:onClick="@{()->loginViewModel.loginClicked(email.getText().toString(), password.getText().toString())}"
+                android:src="@drawable/right_arrow"
+                android:text="@string/access_label"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/password" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyleSmallTitle"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_alignParentEnd="true"
+                android:indeterminate="true"
+                android:indeterminateTintMode="src_atop"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/loginButton"
+                app:layout_constraintEnd_toEndOf="@+id/loginButton"
+                app:layout_constraintStart_toStartOf="@+id/loginButton"
+                app:layout_constraintTop_toTopOf="@+id/loginButton" />
 
 
-                <ProgressBar
-                    android:id="@+id/progressBar"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    style="?android:attr/progressBarStyleSmallTitle"
-                    android:layout_alignParentRight="true"
-                    android:indeterminateTintMode="src_atop"
-                    android:indeterminate="true"
-                    android:visibility="gone" />
-            </RelativeLayout>
-
-        </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
