Revert "Added an id to the root constraint layout"
This reverts commit 909a3953

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,14 +13,12 @@
             type="com.apptec.registrateapp.loginactivity.LoginViewModel" />
     </data>
 
-    <androidx.constraintlayout.motion.widget.MotionLayout
-        android:id="@+id/root_constraint_layout"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/login_background"
         android:gravity="center"
-        android:orientation="vertical"
-        app:layoutDescription="@xml/activity_login_xml_root_constraint_layout_scene">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/imageView"
@@ -160,7 +158,7 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.constraintlayout.motion.widget.MotionLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </layout>
