Showing the user name in the nav drawer

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -2,6 +2,8 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- We not use this variable, but we don't remove it because the data biding class-
+     is not being generated -->
     <data>
 
         <variable
