Let the user add a comment when request a permission

--- a/app/src/main/res/layout/dialog_permission.xml
+++ b/app/src/main/res/layout/dialog_permission.xml
@@ -70,6 +70,7 @@
         app:endIconMode="clear_text">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/dialog_permission_comment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
