Working delete permission

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -23,7 +23,7 @@
     </fragment>
     <fragment
         android:id="@+id/permissionFragment"
-        android:name="com.apptec.camello.mainactivity.fpermission.ui.PermissionFragment"
+        android:name="com.apptec.camello.mainactivity.fpermission.PermissionFragment"
         android:label="PermissionFragment">
         <action
             android:id="@+id/action_permissionFragment_to_dialogDevice"
