--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_assistance"
+        android:icon="@drawable/ic_baseline_chat_bubble_24"
         android:title="@string/notifications_fragment_title" />
 
     <item
